Changes on busqueda V8

--- a/empleobusca.com/data/mendoza/mendoza_p1.html
+++ b/empleobusca.com/data/mendoza/mendoza_p1.html
@@ -4931,7 +4931,7 @@ Nos encontramos en la búsqueda de un Administrativo Contable - Analista de Egre
 
 <script defer="" src="../legacy/ct/MENDOZA/jquery.bundle.min.js"></script>
 <script defer="" src="../legacy/ct/MENDOZA/site.layout.bundle.min.js"></script>
-<script defer="" src="../legacy/ct/MENDOZA/searchbox.bundle.min.js"></script>
+<script defer="" src="../legacy/ct/MENDOZA/searchbox.bundle.min.js"></script>>
 <script>
 
 			window.searchLiterals = {
