--- a/empleobusca.com/data/busqueda.html
+++ b/empleobusca.com/data/busqueda.html
@@ -361,15 +361,14 @@
 <body>
 
   <div class="topbar">
-    <div class="container" style="display:flex; gap:10px; align-items:center;">
-     <a class="logo" title="Empleo Busca" href="../data/home.html">
-
-			<img
-            src="../data/logo_Empleo_Busca.png"
-            alt="Empleo Busca Argentina"
-            class="logo_img"
-            />
-		</a>
+    <div class="container">
+    <a class="logo" title="Empleo Busca" href="../home.html">
+    <img
+      src="../logo_Empleo_Busca.png"
+      alt="Empleo Busca Argentina"
+      class="logo_img"
+    />
+  </a>
 
       <div style="display:flex; gap:10px; align-items:center;">
         <a class="btn" href="./home.html">← Volver al inicio</a>
