--- a/empleobusca.com/data/postulacion.html
+++ b/empleobusca.com/data/postulacion.html
@@ -126,6 +126,71 @@
     .actions { flex-direction: column; }
     .btn { width: 100%; }
   }
+
+  .modal_backdrop{
+  position: fixed;
+  inset: 0;
+  background: rgba(10, 20, 35, 0.55);
+  display: none;                /* oculto por defecto */
+  align-items: center;
+  justify-content: center;
+  padding: 18px;
+  z-index: 9999;
+}
+
+.modal_backdrop.show{
+  display: flex;
+}
+
+.modal_card{
+  width: 100%;
+  max-width: 420px;
+  background: #fff;
+  border-radius: 16px;
+  border: 1px solid #e6edf6;
+  box-shadow: 0 18px 60px rgba(0,0,0,0.25);
+  padding: 18px 18px 16px;
+  text-align: center;
+  animation: modalIn .16s ease-out;
+}
+
+@keyframes modalIn{
+  from { transform: translateY(8px); opacity: 0; }
+  to   { transform: translateY(0);   opacity: 1; }
+}
+
+.modal_icon{
+  width: 52px;
+  height: 52px;
+  border-radius: 14px;
+  background: #0D3878;
+  color: #fff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  font-weight: 900;
+  margin: 6px auto 10px;
+}
+
+.modal_title{
+  font-size: 18px;
+  font-weight: 900;
+  color: #0D3878;
+  margin-bottom: 6px;
+}
+
+.modal_text{
+  font-size: 14px;
+  color: #516173;
+  margin-bottom: 14px;
+}
+
+.modal_actions{
+  display: flex;
+  justify-content: center;
+}
+
 </style>
 
 </head>
@@ -179,17 +244,23 @@
     // Mostrar info de oferta si viene por querystring
     const params = new URLSearchParams(location.search);
     const oi = params.get("oi") || "";
-    let t = params.get("t") || "";
+    let t = (params.get("t") || "").trim();
 
-    // Limpieza: si viene un texto “reportar aviso”, lo ignoramos
-    t = t ? decodeURIComponent(t) : "";
+    // OJO: params.get() YA viene decodificado, no hace falta decodeURIComponent.
+
+    // Si vino el texto de "reportar aviso", lo descartamos
     if (/reportar\s+este\s+aviso/i.test(t)) t = "";
 
     const offerInfo = document.getElementById("offerInfo");
-    
-    if (oi && t) {
+
+    // Mostrar SOLO el nombre si existe.
+    // Si no existe, igual mostramos algo (para que no quede vacío).
+    if (t) {
     offerInfo.style.display = "block";
     offerInfo.textContent = t;
+    } else if (oi) {
+    offerInfo.style.display = "block";
+    offerInfo.textContent = "Postulación";
     }
 
     document.getElementById("btnCancelar").addEventListener("click", () => {
@@ -209,9 +280,30 @@
       }
 
       // “Cartel” + OK => vuelve al inicio
-      alert("Su solicitud ha sido enviada");
-      window.location.href = "./home.html";
+        const modal = document.getElementById("modal_ok_backdrop");
+        const okBtn = document.getElementById("modal_ok_btn");
+
+        // mostrar modal
+        modal.classList.add("show");
+        modal.setAttribute("aria-hidden", "false");
+
+        // OK => volver al inicio (ajustá si tu home está en otra ruta)
+        okBtn.onclick = () => {
+        window.location.href = "./home.html";
+        };
     });
   </script>
+  <div id="modal_ok_backdrop" class="modal_backdrop" aria-hidden="true">
+  <div class="modal_card" role="dialog" aria-modal="true" aria-labelledby="modal_ok_title">
+    <div class="modal_icon">✓</div>
+    <div id="modal_ok_title" class="modal_title">Solicitud enviada</div>
+    <div class="modal_text">Su solicitud ha sido enviada.</div>
+
+    <div class="modal_actions">
+      <button id="modal_ok_btn" class="btn">OK</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
