--- a/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
@@ -5622,88 +5622,60 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <script>
 (function () {
- function getOfferTitleFromEl(el) {
-  // 1) Si el click viene desde la tarjeta (lista izquierda)
-  const art = el.closest("article.box_offer");
-  if (art) {
-    const h2 = art.querySelector("h2");
-    if (h2) {
-      const t = (h2.textContent || "").replace(/\s+/g, " ").trim();
-      if (t) return t;
+
+  function getOfferIdFromEl(el) {
+    const hrefApply = el.getAttribute("data-href-offer-apply");
+    if (hrefApply) {
+      try {
+        const u = new URL(hrefApply, window.location.origin);
+        const oi = u.searchParams.get("oi");
+        if (oi) return oi;
+      } catch (e) {}
     }
-  }
 
-  // 2) Si el click viene desde el panel derecho, buscamos el título de detalle
-  // (ajustamos selectores a algo "título real", evitando textos tipo "reportar")
-  const candidates = [
-    ".box_detail h1",
-    ".box_detail h2",
-    ".box_detail .title_offer h1",
-    ".box_detail .title_offer h2",
-  ];
+    const oiAttr = el.getAttribute("oi");
+    if (oiAttr) return oiAttr;
 
-  for (const sel of candidates) {
-    const node = document.querySelector(sel);
-    if (node) {
-      const t = (node.textContent || "").replace(/\s+/g, " ").trim();
-      if (t && !/reportar\s+este\s+aviso/i.test(t)) return t;
-    }
-  }
-
-  return "";
-}
-
-
-  function getOfferTitleFromEl(el) {
-    // Intentar sacar el título visible de la oferta seleccionada/detalle
-    const detailTitle =
-      document.querySelector(".box_detail h1, .box_detail h2, .box_detail .title_offer h1, .box_detail .title_offer h2");
-    if (detailTitle && detailTitle.textContent.trim()) return detailTitle.textContent.trim();
-
-    const art = el.closest("article.box_offer");
-    const h2 = art ? art.querySelector("h2") : null;
-    if (h2 && h2.textContent.trim()) return h2.textContent.trim();
+    const art = el.closest("article.box_offer[id]");
+    if (art) return art.id;
 
     return "";
   }
 
+  function getTitleFromOfferId(oi) {
+    if (!oi) return "";
+    const art = document.getElementById(oi);
+    if (!art) return "";
+
+    const h2 = art.querySelector("h2");
+    if (!h2) return "";
+
+    return (h2.textContent || "").replace(/\s+/g, " ").trim();
+  }
+
   function goToForm(el) {
     const oi = getOfferIdFromEl(el);
-    const t = getOfferTitleFromEl(el);
-    const url = "../postulacion.html" +
-    (oi || t ? ("?oi=" + encodeURIComponent(oi) + "&t=" + encodeURIComponent(t)) : "");
+    const t  = getTitleFromOfferId(oi);
+
+    const url =
+      "../postulacion.html" +
+      (oi ? ("?oi=" + encodeURIComponent(oi) + (t ? "&t=" + encodeURIComponent(t) : "")) : "");
+
     window.location.href = url;
   }
 
-  // 1) Botón grande “Postularme” (es <span class="b_primary big" data-apply-link ...>)
-  function bindPostularButtons() {
-    // Cazamos por atributos típicos
-    const candidates = Array.from(document.querySelectorAll("[data-apply-link], [shortcut-apply-ac], [data-href-offer-apply]"));
+  function bindOnlyApplyButtons() {
+    // SOLO botones reales de postulación (evita “reportar”, “guardar”, etc.)
+    const applyButtons = Array.from(document.querySelectorAll(
+      "[data-apply-link][data-href-offer-apply], [shortcut-apply-ac][data-href-offer-apply]"
+    ));
 
-    // Y también por texto “Postularme / Postular” por si cambia algo
-    const byText = Array.from(document.querySelectorAll("span, a, button")).filter(n => {
-      const txt = (n.textContent || "").replace(/\s+/g, " ").trim().toLowerCase();
-      return txt === "postularme" || txt === "postular";
-    });
+    applyButtons.forEach(el => {
+      if (el.__boundApply) return;
+      el.__boundApply = true;
 
-    const all = Array.from(new Set([...candidates, ...byText]));
-
-    all.forEach(el => {
-      // evitamos enganchar cosas invisibles o tags raros
       el.style.cursor = "pointer";
-
-      // IMPORTANTE: capturamos antes que otros scripts
       el.addEventListener("click", function (e) {
-        const txt = (el.textContent || "").replace(/\s+/g, " ").trim().toLowerCase();
-        const looksLikeApply =
-          el.hasAttribute("data-apply-link") ||
-          el.hasAttribute("shortcut-apply-ac") ||
-          el.hasAttribute("data-href-offer-apply") ||
-          txt === "postularme" ||
-          txt === "postular";
-
-        if (!looksLikeApply) return;
-
         e.preventDefault();
         e.stopPropagation();
         goToForm(el);
@@ -5711,14 +5683,14 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   }
 
-  bindPostularButtons();
+  bindOnlyApplyButtons();
 
-  // 2) Como el panel derecho se “renderiza” dinámicamente, re-intentamos cada tanto
-  // (muy liviano, y asegura que siempre quede enganchado)
-  const mo = new MutationObserver(() => bindPostularButtons());
+  const mo = new MutationObserver(() => bindOnlyApplyButtons());
   mo.observe(document.documentElement, { childList: true, subtree: true });
+
 })();
 </script>
+
 
 
 </body>
