Changes on P1 Postularme V7

--- a/empleobusca.com/data/postulacion.html
+++ b/empleobusca.com/data/postulacion.html
@@ -190,6 +190,10 @@
   display: flex;
   justify-content: center;
 }
+.modal_actions {
+  display: flex;
+  justify-content: center; /* 👈 esto lo centra */
+}
 
 </style>
 
