Changes on P1 Postularme BS AS

--- a/empleobusca.com/data/buenos_aires/buenos_aires_p29.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p29.html
@@ -5496,5 +5496,78 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>                                                                                       
 
+<script>
+(function () {
+
+  function getOfferIdFromEl(el) {
+    const hrefApply = el.getAttribute("data-href-offer-apply");
+    if (hrefApply) {
+      try {
+        const u = new URL(hrefApply, window.location.origin);
+        const oi = u.searchParams.get("oi");
+        if (oi) return oi;
+      } catch (e) {}
+    }
+
+    const oiAttr = el.getAttribute("oi");
+    if (oiAttr) return oiAttr;
+
+    const art = el.closest("article.box_offer[id]");
+    if (art) return art.id;
+
+    return "";
+  }
+
+  function getTitleFromOfferId(oi) {
+    if (!oi) return "";
+    const art = document.getElementById(oi);
+    if (!art) return "";
+
+    const h2 = art.querySelector("h2");
+    if (!h2) return "";
+
+    return (h2.textContent || "").replace(/\s+/g, " ").trim();
+  }
+
+  function goToForm(el) {
+    const oi = getOfferIdFromEl(el);
+    const t  = getTitleFromOfferId(oi);
+
+    const url =
+      "../postulacion.html" +
+      (oi ? ("?oi=" + encodeURIComponent(oi) + (t ? "&t=" + encodeURIComponent(t) : "")) : "");
+
+    window.location.href = url;
+  }
+
+  function bindOnlyApplyButtons() {
+    // SOLO botones reales de postulación (evita “reportar”, “guardar”, etc.)
+    const applyButtons = Array.from(document.querySelectorAll(
+      "[data-apply-link][data-href-offer-apply], [shortcut-apply-ac][data-href-offer-apply]"
+    ));
+
+    applyButtons.forEach(el => {
+      if (el.__boundApply) return;
+      el.__boundApply = true;
+
+      el.style.cursor = "pointer";
+      el.addEventListener("click", function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        goToForm(el);
+      }, true);
+    });
+  }
+
+  bindOnlyApplyButtons();
+
+  const mo = new MutationObserver(() => bindOnlyApplyButtons());
+  mo.observe(document.documentElement, { childList: true, subtree: true });
+
+})();
+</script>
+
+
+
 </body>
 </html>
