--- a/empleobusca.com/data/postulacion.html
+++ b/empleobusca.com/data/postulacion.html
@@ -194,6 +194,9 @@
   display: flex;
   justify-content: center; /* 👈 esto lo centra */
 }
+.modal_actions .btn {
+  min-width: 120px;
+}
 
 </style>
 
