Changes on buttons without use V5

--- a/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
@@ -5691,7 +5691,23 @@ document.addEventListener("DOMContentLoaded", () => {
 })();
 </script>
 
+<script>
+(function () {
+  var path = window.location.pathname.toLowerCase();
 
+  // Detecta paginas no habilitadas
+  if (path.includes('/evaluaciones') || path.includes('/salarios')) {
+
+    // Si hay historial, vuelve a la oferta
+    if (window.history.length > 1) {
+      window.history.back();
+    } else {
+      // fallback si entran directo
+      window.location.href = '/';
+    }
+  }
+})();
+</script>
 
 </body>
 </html>
