Changes on buttons without use V6

--- a/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
@@ -5693,19 +5693,52 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <script>
 (function () {
-  var path = window.location.pathname.toLowerCase();
+  var path = (location.pathname || "").toLowerCase();
 
-  // Detecta paginas no habilitadas
-  if (path.includes('/evaluaciones') || path.includes('/salarios')) {
+  // Detecta páginas "bloqueadas"
+  var isBlocked = /\/(evaluaciones|salarios)\/?$/.test(path);
 
-    // Si hay historial, vuelve a la oferta
-    if (window.history.length > 1) {
-      window.history.back();
-    } else {
-      // fallback si entran directo
-      window.location.href = '/';
-    }
+  // Clave donde guardamos la última página permitida
+  var KEY = "last_allowed_url";
+
+  // 1) Si NO es bloqueada, guardo esta URL como "última buena"
+  if (!isBlocked) {
+    try { sessionStorage.setItem(KEY, location.href); } catch (e) {}
+    return;
   }
+
+  // 2) Si ES bloqueada: muestro mensaje y vuelvo a donde venía
+  var backTo = "";
+  try { backTo = sessionStorage.getItem(KEY) || ""; } catch (e) {}
+
+  // UI simple
+  document.documentElement.style.background = "#fff";
+  document.body.innerHTML = `
+    <div style="max-width:720px;margin:80px auto;padding:0 16px;text-align:center;font-family:Arial">
+      <h2 style="margin:0 0 12px">Sección no disponible</h2>
+      <p style="margin:0 0 18px">Las evaluaciones y salarios no se pueden ver desde este sitio.</p>
+      <button id="btnVolver" style="padding:10px 16px;border:1px solid #ccc;border-radius:10px;background:#f7f7f7;cursor:pointer">
+        Volver a la oferta
+      </button>
+    </div>
+  `;
+
+  function goBack() {
+    if (backTo && backTo !== location.href) {
+      location.replace(backTo);
+      return;
+    }
+    if (history.length > 1) {
+      history.back();
+      return;
+    }
+    location.replace("/");
+  }
+
+  document.getElementById("btnVolver").addEventListener("click", goBack);
+
+  // auto-volver en 300ms (deja ver el mensaje un instante)
+  setTimeout(goBack, 300);
 })();
 </script>
 
