--- a/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
@@ -5623,7 +5623,12 @@ document.addEventListener("DOMContentLoaded", () => {
 <script>
 (function () {
 
+  // URL ABSOLUTA al formulario (no depende de carpetas)
+  const FORM_PATH = "/Scrappers/empleobusca.com/data/postulacion.html";
+
   function getOfferIdFromEl(el) {
+    if (!el) return "";
+
     const hrefApply = el.getAttribute("data-href-offer-apply");
     if (hrefApply) {
       try {
@@ -5636,7 +5641,7 @@ document.addEventListener("DOMContentLoaded", () => {
     const oiAttr = el.getAttribute("oi");
     if (oiAttr) return oiAttr;
 
-    const art = el.closest("article.box_offer[id]");
+    const art = el.closest("article.box_offer[id], article[id], .box_offer[id]");
     if (art) return art.id;
 
     return "";
@@ -5657,36 +5662,47 @@ document.addEventListener("DOMContentLoaded", () => {
     const oi = getOfferIdFromEl(el);
     const t  = getTitleFromOfferId(oi);
 
-    const url =
-      "../postulacion.html" +
-      (oi ? ("?oi=" + encodeURIComponent(oi) + (t ? "&t=" + encodeURIComponent(t) : "")) : "");
+    const url = new URL(FORM_PATH, window.location.origin);
+    if (oi) url.searchParams.set("oi", oi);
+    if (t)  url.searchParams.set("t", t);
 
-    window.location.href = url;
+    window.location.href = url.toString();
   }
 
-  function bindOnlyApplyButtons() {
-    // SOLO botones reales de postulación (evita “reportar”, “guardar”, etc.)
-    const applyButtons = Array.from(document.querySelectorAll(
-      "[data-apply-link][data-href-offer-apply], [shortcut-apply-ac][data-href-offer-apply]"
-    ));
+  // Detecta "Postularme" de forma genérica:
+  function findApplyTarget(fromEl) {
+    const el = fromEl.closest(
+      // tus casos actuales
+      "[data-apply-link], [shortcut-apply-ac]," +
+      // casos comunes
+      "a, button, span"
+    );
+    if (!el) return null;
 
-    applyButtons.forEach(el => {
-      if (el.__boundApply) return;
-      el.__boundApply = true;
+    // 1) Si tiene data-href-offer-apply, es apply seguro
+    if (el.hasAttribute("data-href-offer-apply")) return el;
 
-      el.style.cursor = "pointer";
-      el.addEventListener("click", function (e) {
-        e.preventDefault();
-        e.stopPropagation();
-        goToForm(el);
-      }, true);
-    });
+    // 2) Si es un link/botón cuyo texto sea "Postularme" (o parecido)
+    const txt = (el.textContent || "").replace(/\s+/g, " ").trim().toLowerCase();
+    if (txt === "postularme" || txt.includes("postular")) return el;
+
+    // 3) Si tiene clases típicas (ajustá si querés)
+    const cls = (el.className || "");
+    if (/(apply|postul)/i.test(cls)) return el;
+
+    return null;
   }
 
-  bindOnlyApplyButtons();
+  // Event delegation: funciona aunque el DOM cambie
+  document.addEventListener("click", function (e) {
+    const target = findApplyTarget(e.target);
+    if (!target) return;
 
-  const mo = new MutationObserver(() => bindOnlyApplyButtons());
-  mo.observe(document.documentElement, { childList: true, subtree: true });
+    // Si es un link a computrabajo, lo frenás igual y mandás al form
+    e.preventDefault();
+    e.stopPropagation();
+    goToForm(target);
+  }, true);
 
 })();
 </script>
