Changes on Block pages and postulation V2

--- a/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
@@ -5556,7 +5556,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   // ==================================================
   // 2) Navegación: que los spans .buildLink funcionen
-  //    (usa data-path="?by=...&pubdate=...&sal=...")
+  //    (usa data-path="?by=...&pubdate=...&sal=...)
   // ==================================================
   document.querySelectorAll("span.buildLink").forEach(el => {
     el.style.cursor = "pointer";
