--- a/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
+++ b/empleobusca.com/data/buenos_aires/buenos_aires_p1.html
@@ -5682,87 +5682,97 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 
- <script>
-    (function () {
-      var path = (location.pathname || "").toLowerCase();
-      var isBlocked = /\/(evaluaciones|salarios)\/?$/.test(path);
-
-      if (!isBlocked) {
-        try {
-          localStorage.setItem("last_allowed_url", location.href);
-        } catch (e) {}
-      }
-    })();
-    </script>
 
 <script>
 (function () {
+  // Ajustá esto según tu estructura:
+  // - si postulacion.html está en la raíz del sitio: "/postulacion.html"
+  // - si está 1 nivel arriba del archivo actual: "../postulacion.html"
+  const FORM_PATH = "../postulacion.html";
 
-  function getOfferIdFromEl(el) {
-    const hrefApply = el.getAttribute("data-href-offer-apply");
-    if (hrefApply) {
-      try {
-        const u = new URL(hrefApply, window.location.origin);
-        const oi = u.searchParams.get("oi");
-        if (oi) return oi;
-      } catch (e) {}
+  function parseOiFromHref(href) {
+    if (!href) return "";
+    try {
+      const u = new URL(href, window.location.href);
+      return u.searchParams.get("oi") || "";
+    } catch (e) {
+      // fallback por si viniera algo raro
+      const m = String(href).match(/[?&]oi=([^&#]+)/i);
+      return m ? decodeURIComponent(m[1]) : "";
     }
+  }
 
+  function getOfferId(el) {
+    // 1) atributo oi (en shortcuts suele venir así):contentReference[oaicite:2]{index=2}
     const oiAttr = el.getAttribute("oi");
     if (oiAttr) return oiAttr;
 
-    const art = el.closest("article.box_offer[id]");
-    if (art) return art.id;
+    // 2) desde data-href-offer-apply (en detalle/listado):contentReference[oaicite:3]{index=3}
+    const hrefApply = el.getAttribute("data-href-offer-apply");
+    const oiFromHref = parseOiFromHref(hrefApply);
+    if (oiFromHref) return oiFromHref;
+
+    // 3) desde el <article id="...">
+    const art = el.closest("article.box_offer[id], article[id]");
+    if (art && art.id) return art.id;
+
+    // 4) desde data-id (por si lo usás)
+    const did = el.closest("[data-id]")?.getAttribute("data-id");
+    if (did) return did;
 
     return "";
   }
 
-  function getTitleFromOfferId(oi) {
-    if (!oi) return "";
-    const art = document.getElementById(oi);
-    if (!art) return "";
+  function getOfferTitle(el, oi) {
+    // 1) título dentro del mismo article (más confiable que buscar por oi)
+    const art = el.closest("article.box_offer, article");
+    const h2local = art ? art.querySelector("h2") : null;
+    if (h2local) return (h2local.textContent || "").replace(/\s+/g, " ").trim();
 
-    const h2 = art.querySelector("h2");
-    if (!h2) return "";
+    // 2) fallback: buscar por id oi y agarrar su h2
+    if (oi) {
+      const byId = document.getElementById(oi);
+      const h2 = byId ? byId.querySelector("h2") : null;
+      if (h2) return (h2.textContent || "").replace(/\s+/g, " ").trim();
+    }
 
-    return (h2.textContent || "").replace(/\s+/g, " ").trim();
+    // 3) fallback: título del panel de detalle si existe
+    const detailTitle = document.querySelector("[data-offers-grid-detail-title]");
+    if (detailTitle) return (detailTitle.textContent || "").replace(/\s+/g, " ").trim();
+
+    return "";
   }
 
   function goToForm(el) {
-    const oi = getOfferIdFromEl(el);
-    const t  = getTitleFromOfferId(oi);
+    const oi = getOfferId(el);
+    const t = getOfferTitle(el, oi);
 
-    const url =
-      "../postulacion.html" +
-      (oi ? ("?oi=" + encodeURIComponent(oi) + (t ? "&t=" + encodeURIComponent(t) : "")) : "");
+    const u = new URL(FORM_PATH, window.location.href);
+    if (oi) u.searchParams.set("oi", oi);
+    if (t)  u.searchParams.set("t", t);
 
-    window.location.href = url;
+    window.location.href = u.toString();
   }
 
-  function bindOnlyApplyButtons() {
-    // SOLO botones reales de postulación (evita “reportar”, “guardar”, etc.)
-    const applyButtons = Array.from(document.querySelectorAll(
-      "[data-apply-link][data-href-offer-apply], [shortcut-apply-ac][data-href-offer-apply]"
-    ));
+  // Delegación: captura clicks aunque el DOM cambie o haya JS encima
+  document.addEventListener("click", function (e) {
+    const target = e.target;
 
-    applyButtons.forEach(el => {
-      if (el.__boundApply) return;
-      el.__boundApply = true;
+    // Matchea tanto detalle como shortcuts
+    const applyEl = target.closest(
+      "[data-href-offer-apply][data-apply-link], " +
+      "[data-href-offer-apply][shortcut-apply-ac], " +
+      "[data-href-offer-apply][data-apply-ac]"
+    );
 
-      el.style.cursor = "pointer";
-      el.addEventListener("click", function (e) {
-        e.preventDefault();
-        e.stopPropagation();
-        goToForm(el);
-      }, true);
-    });
-  }
+    if (!applyEl) return;
 
-  bindOnlyApplyButtons();
+    e.preventDefault();
+    e.stopPropagation();
+    if (e.stopImmediatePropagation) e.stopImmediatePropagation();
 
-  const mo = new MutationObserver(() => bindOnlyApplyButtons());
-  mo.observe(document.documentElement, { childList: true, subtree: true });
-
+    goToForm(applyEl);
+  }, true);
 })();
 </script>
 
